[RISCV] Add OFFLINE_ASM_ALIGN_TRAP implementation for RISCV https://bugs.webkit.org/show_bug.cgi?id=274826

Reviewed by Justin Michaud.

* Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:

Canonical link: https://commits.webkit.org/287700@main